--- a/OpenCV/OpenCV.vcxproj
+++ b/OpenCV/OpenCV.vcxproj
@@ -128,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="OpenCV.cpp" />
+    <ClCompile Include="Chapter1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
