Renamed wrong name opdracht1_3 to opdracht1_2

--- a/OpenCV/OpenCV.vcxproj.filters
+++ b/OpenCV/OpenCV.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="Opdracht1_4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Chapter1_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Opdracht1_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
