--- a/OpenCV/OpenCV.vcxproj.filters
+++ b/OpenCV/OpenCV.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Opdracht1_2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Opdracht1_3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
