--- a/OpenCV/OpenCV.vcxproj
+++ b/OpenCV/OpenCV.vcxproj
@@ -66,7 +66,6 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="OpenCV.props" />
-    <Import Project="..\..\..\..\C++ Projects\OpenCV\opencv_propertysheet.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -133,6 +132,8 @@
     <ClCompile Include="Opdracht1_2.cpp" />
     <ClCompile Include="Opdracht1_3.cpp" />
     <ClCompile Include="Opdracht1_4.cpp" />
+    <ClCompile Include="Opdracht2_2.cpp" />
+    <ClCompile Include="Opdracht2_4.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
