--- a/OpenCV/OpenCV.vcxproj.filters
+++ b/OpenCV/OpenCV.vcxproj.filters
@@ -27,5 +27,11 @@
     <ClCompile Include="Opdracht1_3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Opdracht2_4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Opdracht2_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
